--- a/config.yml
+++ b/config.yml
@@ -16,4 +16,4 @@ logchannel: 1241170834559598683
 admins: [857645225311600660,639990977401978893]
 
 
-bot_token: 'your bot token here'
+bot_token: 'ODI0OTgzMjc0ODQ5MDQyNDcz.GoH_QY.zCFHafsiQZAcIkfPnwCaZO8sDJ3s5mOcDYm1ok'
